<resources>
    <string name="app_name">My Inventory</string>

    <string name="unknown_attributes">Unknown attributes</string>

    <string name="editor_activity_title_new_product">Product</string>

    <string name="editor_activity_title_edit_product">Attributes</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="discard">Discard</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No products yet.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Hint for height EditText -->
    <string name="hint_product_height">Height</string>

    <!-- Hint for width EditText -->
    <string name="hint_product_width">Width</string>

    <!-- Hint for length EditText -->
    <string name="hint_product_length">Length</string>

    <!-- Hint for weight EditText -->
    <string name="hint_product_weight">Weight</string>

    <!-- Hint for price EditText -->
    <string name="hint_product_price">Price</string>

    <!-- Hint for product EditText -->
    <string name="hint_product_name">Product</string>

    <!-- Hint for quantity EditText -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Hint for description EditText -->
    <string name="hint_product_description">Description</string>

    <!-- Hint for picture URL EditText -->
    <string name="hint_product_picture">Picture URL</string>

    <!-- Hint for contact EditText -->
    <string name="hint_product_contact">Supplier contact</string>

    <!-- Overview category for basic data -->
    <string name="category_overview">Overview</string>

    <!-- Options category for spinners -->
    <string name="category_options">Options</string>

    <!-- Weight of the product in kg(s) [CHAR LIMIT=NONE] -->
    <string name="unit_product_weight">kg</string>

    <!-- Quantity of the product in pcs [CHAR LIMIT=NONE] -->
    <string name="unit_product_quantity">pcs</string>

    <!-- Price of the product in $ [CHAR LIMIT=NONE] -->
    <string name="unit_product_price_currency">$</string>

    <!-- Length of the product in cm(s) [CHAR LIMIT=NONE] -->
    <string name="unit_product_length">cm</string>

    <!-- Width of the product in cm(s) [CHAR LIMIT=NONE] -->
    <string name="unit_product_width">cm</string>

    <!-- Height of the product in cm(s) [CHAR LIMIT=NONE] -->
    <string name="unit_product_height">cm</string>

    <!-- 0 per cent sale of product's price [CHAR LIMIT=NONE] -->
    <string name="no_sale">0%</string>

    <!-- 10 per cent sale of product's price [CHAR LIMIT=NONE] -->
    <string name="small_sale">10%</string>

    <!-- 30 per cent sale of product's price [CHAR LIMIT=NONE] -->
    <string name="medium_sale">30%</string>

    <!-- 50 per cent sale of product's price [CHAR LIMIT=NONE] -->
    <string name="huge_sale">50%</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Option possibilities for 3 spinners -->

    <string name="status_not_shipped">Not shipped</string>

    <string name="status_shipped">Shipped</string>

    <string name="status_in_transit">In transit</string>

    <string name="status_delivered">Delivered</string>

    <string name="usual_delivery">Usual Delivery</string>

    <string name="expedite_delivery">Expedite Delivery</string>


    <!-- Options Menu button text for the option to delete all products [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All</string>

    <!-- Options Menu button text for the option to save current product [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Options Menu button text for the option to delete current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- When quantity is 0 -->
    <string name="no_on_stock">No on stock</string>

    <!-- After clicking Sale button Toast's text pops up when quantity is 0  [CHAR LIMIT=20] -->
    <string name="decrement_error">No more items to sell</string>


    <!-- Text(s) for buttons-->

    <string name="increment">+</string>

    <string name="decrement">-</string>

    <string name="add">+</string>

    <string name="order_more">Order More</string>

    <string name="sale">Sale</string>

    <!-- Text for quantity EditText-->
    <string name="quantity">1</string>





























</resources>
